--- a/join.html
+++ b/join.html
@@ -4,6 +4,7 @@
 <head>
     <title>회원가입</title>
     <script src="./join.js"></script>
+    <script src="./checkId.php"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 
     <!-- Google fonts-->
@@ -12,32 +13,28 @@
         type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="./styles.css" rel="stylesheet" />
-    <script>
-        function test(){
-            console.log('test' + document.getElementById('name').value);
-
-        }
-    </script>
 </head>
 
 <body>
+    <?php  ?>
         <div class="container">
             <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">회원가입</h2>
+
+            <form action="./join.php" method="post">
             <!-- Contact Section Form-->
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-xl-7">
                         <!-- 아이디 -->
                         <div class="form-floating mb-3">
-                            <input class="form-control" id="userId" oninput="focusId()" type="text" placeholder="ID를 입력하세요" required/>
+                            <input class="form-control" name="userId" id="userId" oninput="focusId()" type="text" placeholder="ID를 입력하세요" required/>
                             <label for="userId">사용자ID</label>
-                            <button class="btn btn-primary btn-xl" id="zipcodeBtn" onclick="checkId()">ID 중복검사</button>
-                            <div class="invalid-feedback" id="checkId">ID를 입력하세요</div>
-                            <!-- <button class="btn btn-primary btn-xl" id="idCheckBtn" onclick="checkId()">ID 중복확인</button> -->
-            
+                            <!-- <button class="btn btn-primary btn-xl" id="checkIdBtn" onclick="checkId()">ID 중복검사</button> -->
+                            <input type="button" class="btn btn-primary btn-xl" id="checkIdBtn" value="ID 중복검사" onclick="checkId($userId)">
+                            <div class="invalid-feedback" id="checkId">ID를 입력하세요</div>            
                         </div>
                         <!-- 비밀번호 -->
                         <div class="form-floating mb-3">
-                            <input class="form-control" id="pw" type="password" oninput="validPw()"
+                            <input class="form-control" name="pw" id="pw" type="password" oninput="validPw()"
                                 placeholder="4-12자리의 영문, 숫자, 특수문자만 가능" required/>
                             <label for="pw">비밀번호</label>
                             <div class="invalid-feedback" id="checkPw">비밀번호를 입력하세요</div>
@@ -51,14 +48,14 @@
                         </div>
                         <!-- 이름 -->
                         <div class="form-floating mb-3">
-                            <input class="form-control" id="name" type="text" placeholder="Enter your name..." oninput="checkName()"
+                            <input class="form-control" name="name" id="name" type="text" placeholder="Enter your name..." oninput="checkName()"
                                 data-sb-validations="required" required/>
                             <label for="name">성명</label>
                             <div class="invalid-feedback" id="checkName">이름에는 공백이 없어야 합니다</div>
                         </div>                     
                         <!-- 이메일 -->
                         <div class="form-floating mb-3">
-                            <input class="form-control" id="email" type="email" placeholder="name@example.com" oninput="checkEmail()" data-sb-validations="required,email" />
+                            <input class="form-control" name="email" id="email" type="email" placeholder="name@example.com" oninput="checkEmail()" data-sb-validations="required,email" />
                             <label for="email">E-mail</label>
                             <div class="invalid-feedback" id="checkEmail">이메일 형식이 올바르지 않습니다</div>
                         </div>
@@ -75,13 +72,14 @@
                         </div>
                         <!-- 폰번호 -->
                         <div class="form-floating mb-3">
-                            <input class="form-control" id="phone" type="tel" oninput="checkPhone()" placeholder="(123) 456-7890" data-sb-validations="required" required/>
+                            <input class="form-control" name="phone" id="phone" type="tel" oninput="checkPhone()" placeholder="(123) 456-7890" data-sb-validations="required" required/>
                             <label for="phone">휴대폰 번호</label>
                             <div class="invalid-feedback" id="checkPhone">휴대폰 번호가 올바르지 않습니다</div>
                         </div>
-                        <button class="btn btn-primary btn-xl" id="submitButton" type="submit">다음</button>
+                        <input class="btn btn-primary btn-xl" id="submitButton" type="submit">
                 </div>
             </div>
+        </form>
         </div>
     
 </body>
